[gd_scene load_steps=8 format=3 uid="uid://hfb7b7r05eia"]

[ext_resource type="Script" path="res://Mobs/Mob/mob.gd" id="1_m86af"]
[ext_resource type="Texture2D" uid="uid://u8yk5rjuxxsm" path="res://Mobs/Mob/маст.png" id="2_ldfr4"]
[ext_resource type="Texture2D" uid="uid://ceyk8lomost1b" path="res://Mobs/Mob/осветленный маст.png" id="3_k33ex"]
[ext_resource type="Texture2D" uid="uid://c82glylmmnhs7" path="res://Mobs/Mob/Border.png" id="3_ye7on"]

[sub_resource type="CircleShape2D" id="CircleShape2D_l1r17"]
radius = 33.7343

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e3wu8"]
size = Vector2(300, 300)

[sub_resource type="CircleShape2D" id="CircleShape2D_ltv7g"]
radius = 549.008

[node name="Mob" type="CharacterBody2D" groups=["Enemies", "Mobs"]]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_m86af")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_l1r17")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="HoverArea" type="Area2D" parent="."]

[node name="ClickablePart" type="CollisionShape2D" parent="HoverArea"]
shape = SubResource("RectangleShape2D_e3wu8")

[node name="CrushDistance" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CrushDistance"]
shape = SubResource("CircleShape2D_ltv7g")

[node name="Orig" type="Sprite2D" parent="."]
texture = ExtResource("2_ldfr4")

[node name="LowHealth" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.529885, 0.495337, 0.957984, 1)
texture = ExtResource("3_k33ex")

[node name="Border" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_ye7on")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="input_event" from="HoverArea" to="." method="_on_hover_area_input_event"]
[connection signal="mouse_entered" from="HoverArea" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="HoverArea" to="." method="_on_hover_area_mouse_exited"]
[connection signal="body_entered" from="CrushDistance" to="." method="_on_crush_distance_body_entered"]
[connection signal="body_exited" from="CrushDistance" to="." method="_on_crush_distance_body_exited"]
